--- a/components/authentication/azure/build.gradle
+++ b/components/authentication/azure/build.gradle
@@ -10,7 +10,7 @@ plugins {
 java {
     modularity.inferModulePath = true
     withSourcesJar()
-    //withJavadocJar()
+    withJavadocJar()
 }
 
 test {
