--- a/components/http/okHttp/build.gradle
+++ b/components/http/okHttp/build.gradle
@@ -10,8 +10,7 @@ plugins {
 java {
     modularity.inferModulePath = true
     withSourcesJar()
-    //Prevent Javadoc from causing build failure
-    //withJavadocJar()
+    withJavadocJar()
 }
 
 test {
