--- a/components/serialization/json/build.gradle
+++ b/components/serialization/json/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id 'eclipse'
     id 'maven-publish'
     id 'signing'
+    id 'jacoco'
+    id 'com.github.spotbugs' version '5.0.13'
+    id "org.sonarqube" version "3.5.0.2730"
 }
 
 java {
@@ -15,6 +18,43 @@ java {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
+
+jacoco {
+    toolVersion = "0.8.8"
+}
+
+spotbugsMain {
+    excludeFilter = file("spotBugsExcludeFilter.xml")
+    reports {
+        html {
+            enabled = true
+            destination = file("$buildDir/reports/spotbugs/main/spotbugs.html")
+            stylesheet = 'fancy-hist.xsl'
+        }
+    }
+}
+
+spotbugsTest {
+    excludeFilter = file("spotBugsExcludeFilter.xml")
+    reports {
+        html {
+            enabled = true
+            destination = file("$buildDir/reports/spotbugs/test/spotbugs.html")
+            stylesheet = 'fancy-hist.xsl'
+        }
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
 }
 
 sourceSets {
@@ -41,6 +81,14 @@ def pomConfig = {
             distribution "repo"
         }
     }
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "microsoft_kiota-java"
+    property "sonar.organization", "microsoft"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 //Publishing tasks-
