--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @baywet @ddyett @MichaelMainer @nikithauc @zengin @ramsessanchez @andrueastman
+* @baywet @MichaelMainer @zengin @ramsessanchez @andrueastman
