--- a/components/abstractions/gradle/dependencies.gradle
+++ b/components/abstractions/gradle/dependencies.gradle
@@ -9,7 +9,7 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.javatuples:javatuples:1.2'
-    implementation 'com.github.hal4j:uritemplate:1.3.0'
+    implementation 'com.damnhandy:handy-uri-templates:2.1.7'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'io.opentelemetry:opentelemetry-api:1.22.0'
     implementation 'io.opentelemetry:opentelemetry-context:1.22.0'
