--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,11 @@ updates:
     interval: daily
   open-pull-requests-limit: 10
 - package-ecosystem: gradle
+  directory: "/components/serialization/form"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
+- package-ecosystem: gradle
   directory: "/components/serialization/json"
   schedule:
     interval: daily
@@ -27,6 +32,11 @@ updates:
   open-pull-requests-limit: 10
 - package-ecosystem: gradle
   directory: "/components/abstractions/android"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
+- package-ecosystem: gradle
+  directory: "/components/serialization/form/android"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
