--- a/components/authentication/azure/build.gradle
+++ b/components/authentication/azure/build.gradle
@@ -234,6 +234,6 @@ gradle.taskGraph.whenReady { taskGraph ->
 
 model {
     tasks.generatePomFileForMavenPublication {
-        outputLocation = file("${project.buildDir}/generated-pom.xml")
+        destination = file("${project.buildDir}/generated-pom.xml")
     }
 }
