--- a/components/authentication/azure/android/build.gradle
+++ b/components/authentication/azure/android/build.gradle
@@ -24,6 +24,7 @@ apply plugin: "com.android.library"
 apply plugin: "com.github.ben-manes.versions"
 
 android {
+    namespace "com.microsoft.kiota.authentication"
     compileSdkVersion 33
 
     defaultConfig {
