--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,6 +21,11 @@ updates:
     interval: daily
   open-pull-requests-limit: 10
 - package-ecosystem: gradle
+  directory: "/components/serialization/multipart"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
+- package-ecosystem: gradle
   directory: "/components/authentication/azure"
   schedule:
     interval: daily
@@ -47,6 +52,11 @@ updates:
   open-pull-requests-limit: 10
 - package-ecosystem: gradle
   directory: "/components/serialization/text/android"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
+- package-ecosystem: gradle
+  directory: "/components/serialization/multipart/android"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
