--- a/settings.gradle
+++ b/settings.gradle
@@ -10,5 +10,6 @@ include ':components:abstractions' + suffix
 include ':components:serialization:form' + suffix
 include ':components:serialization:json' + suffix
 include ':components:serialization:text' + suffix
+include ':components:serialization:multipart' + suffix
 include ':components:authentication:azure' + suffix
 include ':components:http:okHttp' + suffix
