--- a/components/serialization/multipart/gradle/dependencies.gradle
+++ b/components/serialization/multipart/gradle/dependencies.gradle
@@ -1,6 +1,7 @@
 dependencies {
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
@@ -9,4 +10,5 @@ dependencies {
     implementation 'com.google.guava:guava:32.1.1-jre'
 
     api project(':components:abstractions')
+    testImplementation project(':components:serialization:json')
 }
