--- a/components/http/okHttp/gradle/dependencies.gradle
+++ b/components/http/okHttp/gradle/dependencies.gradle
@@ -11,7 +11,7 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'io.opentelemetry:opentelemetry-api:1.31.0'
     implementation 'io.opentelemetry:opentelemetry-context:1.31.0'
-    implementation 'io.opentelemetry:opentelemetry-semconv:1.30.1-alpha'
+    implementation 'io.opentelemetry.semconv:opentelemetry-semconv:1.22.0-alpha'
     implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     api 'com.squareup.okhttp3:okhttp:4.12.0'
