--- a/components/authentication/azure/build.gradle
+++ b/components/authentication/azure/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'jacoco'
     id 'com.github.spotbugs' version '5.2.3'
     id "org.sonarqube" version "4.4.1.3373"
+    id "com.diffplug.spotless" version "6.22.0"
 }
 
 java {
@@ -236,3 +237,5 @@ model {
         destination = file("${project.buildDir}/generated-pom.xml")
     }
 }
+
+apply from: file('../../../spotless.groovy')
