- switches sonarcloud to multiproject build and fixes build warning

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'kiota-java'
+System.setProperty("sonar.gradle.skipCompile", "true")
 
 String suffix = ""
 if (Boolean.parseBoolean(settings['android'])) {
