Add @Ndiritu to codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @baywet @MichaelMainer @zengin @ramsessanchez @andrueastman
+* @baywet @MichaelMainer @zengin @ramsessanchez @andrueastman @Ndiritu
