--- a/components/http/okHttp/gradle/dependencies.gradle
+++ b/components/http/okHttp/gradle/dependencies.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation 'io.opentelemetry:opentelemetry-api:1.36.0'
     implementation 'io.opentelemetry:opentelemetry-context:1.36.0'
     implementation 'io.opentelemetry.semconv:opentelemetry-semconv:1.24.0-alpha'
+    implementation 'io.opentelemetry.semconv:opentelemetry-semconv-incubating:1.24.0-alpha'
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     api 'com.squareup.okhttp3:okhttp:4.12.0'
 
