--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,21 +2,9 @@ name: Gradle Build And Test
 
 on:
   push:
-    branches: [dev, main]
-    paths-ignore: 
-      - '**.gradle/wrapper'
-      - '**.gitignore'
-      - 'LICENSE'
-      - 'THIRD PARTY NOTICES'
-      - '**.md'
+    branches: [main]
   pull_request:
-    branches: [dev, main]
-    paths-ignore:
-      - '**.gradle/wrapper'
-      - '**.gitignore'
-      - 'LICENSE'
-      - 'THIRD PARTY NOTICES'
-      - '**.md'
+    branches: [main]
   workflow_dispatch:
 
 jobs:
