--- a/components/authentication/azure/build.gradle
+++ b/components/authentication/azure/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'jacoco'
+    id 'com.github.spotbugs'
+    id 'com.diffplug.spotless'
 }
 
 java {
