--- a/components/bundle/gradle/dependencies.gradle
+++ b/components/bundle/gradle/dependencies.gradle
@@ -1,4 +1,12 @@
 dependencies {
+    // Use JUnit Jupiter API for testing.
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.3'
+
+    // Use JUnit Jupiter Engine for testing.
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
+
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 
     api project(':components:abstractions')
